--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,1 @@
-pandas
-numpy
-scikit-learn==1.7
-scikit-survival
-lifelines
-lightgbm
-fastapi
-uvicorn[standard]
-pydantic
-joblib
-pyyaml
-loguru
-pydantic-settings
-requests
+# Add your dependencies here
