--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-# Add your dependencies here
+pandas
+numpy
+scikit-learn==1.7
+scikit-survival
+lifelines
+lightgbm
+fastapi
+uvicorn[standard]
+pydantic
+joblib
+pyyaml
+loguru
+pydantic-settings
+requests
