Add the authentication using jwt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-dotenv
 pandas
 numpy
 scikit-learn==1.7
@@ -12,3 +13,7 @@ pyyaml
 loguru
 pydantic-settings
 requests
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
+dotenv
