--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Predictions/
 __pycache__
 commands.txt
 logs/
+__pycache__/*.pyc
+Project_Structure
+mlflow.db
+mlflow_debug.py
+train_vendor_id.png
